--- a/webTree/404/crash/index.html
+++ b/webTree/404/crash/index.html
@@ -138,7 +138,7 @@
         <p class="errorCODE"> errorCODE: ERR_INTERNAL_SERVER_FAILURE </p>
         <div class="alignRIGHT">
             <a href="javascript:history.back()"> <button class="buttonMAIN" style="float: right; margin-right: 125px;"> goBACK </button> </a>
-            <a href="../../homepage/index.html"> <button class="buttonMAIN buttonMAINalt" style="float: right; margin-right: 30px;"> homePAGE </button> </a>
+            <a href="../../homepage"> <button class="buttonMAIN buttonMAINalt" style="float: right; margin-right: 30px;"> homePAGE </button> </a>
         </div>
     </div>
 </body>
