--- a/webTree/profiles/cumgur/index.html
+++ b/webTree/profiles/cumgur/index.html
@@ -34,11 +34,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD"></div>
@@ -60,7 +60,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> profiles </a> </h1>
+            <h1> <a href=".."> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: #ff9e9e"> @cumgur </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
