--- a/webTree/profiles/shaGGy/index.html
+++ b/webTree/profiles/shaGGy/index.html
@@ -34,11 +34,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -60,7 +60,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> profiles </a> </h1>
+            <h1> <a href=".."> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: rgb(215, 130, 255)"> @shaGGy </span> </a> </h2>
             <h3 style="padding-left: 265px;"> └────────── accountPage </h3>
 
@@ -105,7 +105,7 @@
                     </div>
                     <div class="borderLINE" style="float: left; height: 75%;"> </div>
                     <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                        shot on Samsung Galaxy by: <span class="toolTIP"><a href="../../404/index.html" style="color: #abf7b1;">@saken</a><span class="toolTIPtxt" style="margin-left: -45px">member</span></span>
+                        shot on Samsung Galaxy by: <span class="toolTIP"><a href="../../404" style="color: #abf7b1;">@saken</a><span class="toolTIPtxt" style="margin-left: -45px">member</span></span>
                         <span class="mediaPOST"> <br>
                             <video src="../../../media/postMEDIA/vid/shaggy/shaggyP05.mp4" preload="metadata" controls class="mediaROUNDED" style=" width: 215px; vertical-align: top;" alt="shaggyP05.mp4"> notSupportedVIDEO </video>
                         </span> <br>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="borderLINE" style="float: left; height: 75%;"> </div>
                     <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                        shot-out to my dog: <span class="toolTIP"><a href="../../404/index.html" style="color: burlywood;">@king</a><span class="toolTIPtxt" style="margin-left: -45px">member</span></span>
+                        shot-out to my dog: <span class="toolTIP"><a href="../../404" style="color: burlywood;">@king</a><span class="toolTIPtxt" style="margin-left: -45px">member</span></span>
                         <span class="mediaPOST"> <br>
                             <a href="../../../media/postMEDIA/img/shaggy/shaggyP04-01.jpg" target="_blank" title=">> openIMG">
                                 <img src="../../../media/postMEDIA/img/shaggy//thumb/shaggyP04-01_320x427.jpg" class="mediaROUNDED" loading="lazy" style=" width: 155px; vertical-align: top;" alt="shaggyP04-01.jpg">
