--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5; url=webTree/homepage/index.html" />
+    <meta http-equiv="refresh" content="5; url=webTree/homepage" />
     
     <title> [ i ] Redirecting... </title>
 
@@ -31,6 +31,6 @@
 </head>
 <body>
     <p> auto redirect in 5 seconds ... </p>
-    <p><a href="webTree/homepage/index.html" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
+    <p><a href="webTree/homepage" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
 </body>
 </html>
