--- a/webTree/profiles/index.html
+++ b/webTree/profiles/index.html
@@ -179,9 +179,9 @@
     <div class="headMENU">
         <a href="javascript:alert('[ i ]  list of registered members in [9] certifiedBAKA !')" class="logo"> <img src="../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a class="active" href="../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a class="active" href="../homepage" title=">> homePage"> homePage </a>
+            <a href="../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
@@ -211,7 +211,7 @@
                         <p style="color: gray;">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="sub2pew/index.html" style="color: aqua;">@sub2pew</a>
+                                    <a href="sub2pew" style="color: aqua;">@sub2pew</a>
                                     <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                                 </span>
                         </p>
@@ -227,7 +227,7 @@
                         <p style="color: gray">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="shaGGy/index.html" style="color: rgb(215, 130, 255);">@shaGGy</a>
+                                    <a href="shaGGy" style="color: rgb(215, 130, 255);">@shaGGy</a>
                                     <span class="toolTIPtxt" style="margin-left: -45px"> member </span>
                                 </span>
                         </p>
@@ -243,7 +243,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="zhalgas/index.html" style="color: rgb(114, 213, 250);">@zhalgas</a>
+                                <a href="zhalgas" style="color: rgb(114, 213, 250);">@zhalgas</a>
                                 <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
                             </span>
                     </p>
@@ -259,7 +259,7 @@
                         <p style="color: gray;">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="../404/index.html" style="color: burlywood;">@king</a>
+                                    <a href="../404" style="color: burlywood;">@king</a>
                                     <span class="toolTIPtxt" style="margin-left: -45px"> member </span>
                                 </span>
                         </p>
@@ -275,7 +275,7 @@
                         <p style="color: gray;">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="../404/index.html" style="color: #abf7b1;">@saken</a>
+                                    <a href="../404" style="color: #abf7b1;">@saken</a>
                                     <span class="toolTIPtxt" style="margin-left: -50px"> mod-user </span>
                                 </span>
                         </p>
@@ -291,7 +291,7 @@
                         <p style="color: gray">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="cumgur/index.html" style="color: #ff9e9e;">@cumgur</a>
+                                    <a href="cumgur" style="color: #ff9e9e;">@cumgur</a>
                                     <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
                                 </span>
                         </p>
@@ -307,7 +307,7 @@
                         <p style="color: gray">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="chigurh/index.html" class="gradRAINBOW" style="color: white;">@chigurh</a>
+                                    <a href="chigurh" class="gradRAINBOW" style="color: white;">@chigurh</a>
                                     <span class="toolTIPtxt" style="margin-left: -80px"> premium-member </span>
                                 </span>
                         </p>
