--- a/webTree/homepage/index.html
+++ b/webTree/homepage/index.html
@@ -166,7 +166,7 @@
     <div class="underMENU centerDIV">
         <div class="titleTXT" style="white-space: nowrap; text-align: center;">
             <h1 style="color: cornflowerblue;"> the homepage of [9] certifiedBAKA </h1>
-            <h2 style="padding-top: 15px;"> choose category from the header or select one below .. </h2>
+            <h2 style="padding-top: 15px;"> browse through the header or select one below .. </h2>
         </div>
 
         <div style="padding-top: 20px; position: relative; left: 50%; margin-left: -100px;">
