--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5; url=webTree/homepage" />
+    <meta http-equiv="refresh" content="5; url=webTree/homepage/index.html"/>
     
     <title> [ i ] Redirecting... </title>
+    
+    <script type="text/javascript" src="script/countdownTime.js"> </script>
 
     <style>
         @media screen and (max-width: 412px) {
@@ -30,7 +32,7 @@
     </style>
 </head>
 <body>
-    <p> auto redirect in 5 seconds ... </p>
-    <p><a href="webTree/homepage" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
+    <p> auto redirect in <span id="countdownREDIRECT"> 5 </span> seconds ... </p>
+    <p><a href="webTree/homepage/index.html" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
 </body>
 </html>
