--- a/webTree/homepage/index.html
+++ b/webTree/homepage/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../style/scrollBAR.css" type="text/css">
+    <link rel="stylesheet" href="../../style/cssFonts/fontConsolas.css" type="text/css">
 
     <link rel="icon" href="../../favicon/nine9.png" type="image/png">
 
@@ -140,8 +141,8 @@
         <div class="headMENU-R headMENUalt">
             <!-- <a class="homeNotice" href="javascript:alert('[ ! ]  it is recommended to use the following settings:\nwebBrowser :: Google Chrome 108.0.5359.99 or later versions.\n\nadditionalNotes :: this website may not display correctly on mobile devices or other devices with small screen, so make sure to use desktop or tablet instead !!')" style="margin-right: 50px;" title="[ i ]  click to read ..."> [!] importantNotice </a> -->
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> homePage </a>
-            <a href="../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -170,8 +171,8 @@
         </div>
 
         <div style="padding-top: 20px; position: relative; left: 50%; margin-left: -100px;">
-            <a href="featuredPosts"> <button class="buttonNAV button01" style="position: absolute; margin-left: 175px;"> featuredPosts </button> </a>
-            <a href="../profiles"><button class="buttonNAV button02" style="position: absolute; margin-left: -175px;"> membersBAKA </button> </a> 
+            <a href="featuredPosts/index.html"> <button class="buttonNAV button01" style="position: absolute; margin-left: 175px;"> featuredPosts </button> </a>
+            <a href="../profiles/index.html"><button class="buttonNAV button02" style="position: absolute; margin-left: -175px;"> membersBAKA </button> </a> 
         </div>
     </div>
 
