--- a/webTree/about/index.html
+++ b/webTree/about/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../style/scrollBAR.css" type="text/css">
+    <link rel="stylesheet" href="../../style/cssFonts/fontConsolas.css" type="text/css">
 
     <link rel="icon" href="../../favicon/aboutPAGE.png" type="image/png">
 
@@ -136,10 +137,10 @@
 
 <body>
     <div class="headMENU">
-        <a href="../homepage" class="logo"> <img src="../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
+        <a href="../homepage/index.html" class="logo"> <img src="../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../homepage" title=">> homePage"> homePage </a>
-            <a href="../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
