--- a/webTree/funstuff/imagesGIFs/index.html
+++ b/webTree/funstuff/imagesGIFs/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/funStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
+    <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
     <link rel="icon" href="../../../favicon/funSTUFF.png" type="icon/png">
 
@@ -91,11 +92,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a class="active" href=".." title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a class="active" href="../index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -115,7 +116,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> funSTUFF </a> </h1>
+            <h1> <a href="../index.html"> funSTUFF </a> </h1>
             <h2 style="padding-left: 75px;"> └────────── images & GIFs </h2>
         </div>
         
