--- a/webTree/profiles/sub2pew/index.html
+++ b/webTree/profiles/sub2pew/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/membersStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
+    <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
     <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
 
@@ -34,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -60,7 +61,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
+            <h1> <a href="../index.html"> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: aqua"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
@@ -86,6 +87,18 @@
                         <p style="cursor: help;"> <span> <a onclick="userINFO04()"> [ i ]&nbsp;&nbsp;totalPosts </a> </span> </p>
                     </div>
                 </p>
+
+                <div style="padding-top: 15px;">
+                    <div class="postHEAD paragraphMARGIN">
+                        <p style="color: gray"> <span style="color: darkseagreen;"> additionalINFO </span> </p>
+                    </div>
+                    <div class="borderLINE" style="float: right; height: 75%"> </div>
+                        <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
+                            <div style="padding-left: 35px">
+                                <p> <span> <a href="animeTitleLOG/index.html"> [ i ]&nbsp;&nbsp;animeTTL#log </a> </span> </p>
+                            </div>
+                        </p>
+                </div>
         </div>
 
         <div id="postsBOX">
@@ -106,7 +119,7 @@
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     things are going pretty smoothly by now... <br> <br>
-                    I've been working on <span><a href="../../funstuff" target="_blank">funSTUFF</a></span> recently and encountered
+                    I've been working on <span><a href="../../funstuff/index.html" target="_blank">funSTUFF</a></span> recently and encountered
                     several performance issues when displaying too much
                     images at once. some of them were in high quality xD. <br> <br>
 
@@ -147,7 +160,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="textBORDER" style="float: left; width: 550px;">
                 <div class="postHEAD paragraphMARGIN">
@@ -289,8 +301,6 @@
                 </span>
                 </p>
             </div>
-
-            <!-- newPOST -->
         </div>
     </div>
 </body>
