--- a/webTree/profiles/zhalgas/index.html
+++ b/webTree/profiles/zhalgas/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/membersStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
+    <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
     <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
 
@@ -34,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -60,7 +61,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
+            <h1> <a href="../index.html"> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: rgb(114, 213, 250)"> @zhalgas </span> </a> </h2>
             <h3 style="padding-left: 265px;"> └────────── accountPage </h3>
 
@@ -365,8 +366,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- newPOST -->
         </div>
     </div>
 </body>
