--- a/webTree/funstuff/playGround/index.html
+++ b/webTree/funstuff/playGround/index.html
@@ -35,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a class="active" href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage" title=">> homePage"> homePage </a>
+            <a class="active" href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -61,7 +61,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../index.html"> funSTUFF </a> </h1>
+            <h1> <a href=".."> funSTUFF </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <span style="color: aliceblue"> playGround </span> </h2>
         </div>
 
@@ -76,7 +76,7 @@
                         <p style="cursor: help;"> <span> <a onclick="quickTXT02()"> [i] table of contents </a> </span> </p>
                         <p style="cursor: help;"> <span> <a onclick="quickTXT03()"> [i] software used </a> </span> </p>
                         <p style="cursor: help;"> <span> <a onclick="quickTXT04()"> [?] who is chiruno </a> </span> </p>
-                        <p> <span> <a href="../../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [!] crash this webpage!</a> </span> </p>
+                        <p> <span> <a href="../../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [!] crash this webpage!</a> </span> </p>
                     </div>
                 </p>
         </div>
