--- a/webTree/funstuff/index.html
+++ b/webTree/funstuff/index.html
@@ -44,9 +44,9 @@
     <div class="headMENU">
         <a href="javascript:alert('[ i ]  have some fun browsing here ! ~')" class="logo"> <img src="../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../homepage" title=">> homePage"> homePage </a>
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> funSTUFF </a>
-            <a href="../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -81,7 +81,7 @@
                     <p style="cursor: help;"> <span> <a onclick="quickTXT02()"> [ i ]&nbsp;&nbsp;table of contents </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="quickTXT03()"> [ i ]&nbsp;&nbsp;software used </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="quickTXT04()"> [ ? ]&nbsp;&nbsp;who is chiruno </a> </span> </p>
-                    <p> <span> <a href="../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
+                    <p> <span> <a href="../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [ ! ]&nbsp;&nbsp;crash this webpage!</a> </span> </p>
                 </div>
             </p>
         </div>
@@ -110,10 +110,10 @@
                 <div class="textBORDERin" style="width: 250px;">
                     <div class="borderLINEin" style="float: left; height: 70%"> </div>
                     <p>
-                        <a href="../404/index.html"> [ &gt; ] video & movies&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="imagesGIFs/index.html"> [ &gt; ] images & GIFs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="../404/index.html"> [ &gt; ] soundtracks&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="playGround/index.html"> [ &gt; ] playGround&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="../404"> [ &gt; ] video & movies&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="imagesGIFs"> [ &gt; ] images & GIFs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="../404"> [ &gt; ] soundtracks&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="playGround"> [ &gt; ] playGround&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
                     </p>
                 </div>
                 <p style="text-align: right; padding-top: 10px; padding-right: 15px">
