--- a/webTree/profiles/sub2pew/animeTitleLOG/index.html
+++ b/webTree/profiles/sub2pew/animeTitleLOG/index.html
@@ -40,11 +40,11 @@
 
 <body>
     <div class="headMENU">
-        <a href="../../index.html" class="logo"> <img src="../../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../.." class="logo"> <img src="../../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../../homepage/index.html" title=">> homePage"> homePage </a>
-            <a href="../../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../../about/index.html" title=">> aboutPage"> aboutPage </a>
+            <a href="../../../homepage" title=">> homePage"> homePage </a>
+            <a href="../../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../../about" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -66,8 +66,8 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href="../../index.html"> profiles </a> </h1>
-            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="../index.html"> <span style="color: aqua"> @sub2pew </span> </a> </h2>
+            <h1> <a href="../.."> profiles </a> </h1>
+            <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href=".."> <span style="color: aqua"> @sub2pew </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── animeTTL#log </h3>
 
             <div style="padding: 10px;"> </div>
