--- a/webTree/profiles/azret/index.html
+++ b/webTree/profiles/azret/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
 
     <script type="text/javascript" src="../../../script/changeTEXT.js"> </script>
-    <script type="text/javascript" src="../../../script/replyPOST.template.js"> </script>
+    <script type="text/javascript" src="../../../script/replyPOST.js"> </script>
     <script type="text/javascript" src="../../../script/userInfo/userInfoAZRET.js"> </script>
     <script type="text/javascript" src="../../../script/playAUDIO.js"> </script>
     <script type="text/javascript" src="../../../script/currentTime.js"> </script>
