--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <style>
         @media screen and (max-width: 412px) {
-            p {
-                font-size: 15px;
+            a, p {
+                font-size: 15px !important;
             }
         }
 
